prevent jumping

--- a/assets/quantity-popover.css
+++ b/assets/quantity-popover.css
@@ -68,6 +68,10 @@ quantity-popover .quantity__rules span:first-of-type {
     background-color: rgba(var(--color-foreground), 0.03);
   }
 
+  .variant-item__quantity-wrap--empty {
+    margin-right: 2.7rem;
+  }
+
   .quantity-popover__info.global-settings-popup {
     width: 27rem;
   }
